; ModuleID = '/home/carl/AnghaBench/linux/drivers/of/extr_base.c_of_parse_phandle_with_fixed_args.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/of/extr_base.c_of_parse_phandle_with_fixed_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }
%struct.of_phandle_args = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @of_parse_phandle_with_fixed_args(%struct.device_node* %0, i8* %1, i32 %2, i32 %3, %struct.of_phandle_args* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.device_node*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.of_phandle_args*, align 8
  store %struct.device_node* %0, %struct.device_node** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store %struct.of_phandle_args* %4, %struct.of_phandle_args** %11, align 8
  %12 = load i32, i32* %10, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %5
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %6, align 4
  br label %24

17:                                               ; preds = %5
  %18 = load %struct.device_node*, %struct.device_node** %7, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %10, align 4
  %22 = load %struct.of_phandle_args*, %struct.of_phandle_args** %11, align 8
  %23 = call i32 @__of_parse_phandle_with_args(%struct.device_node* %18, i8* %19, i32* null, i32 %20, i32 %21, %struct.of_phandle_args* %22)
  store i32 %23, i32* %6, align 4
  br label %24

24:                                               ; preds = %17, %14
  %25 = load i32, i32* %6, align 4
  ret i32 %25
}

declare dso_local i32 @__of_parse_phandle_with_args(%struct.device_node*, i8*, i32*, i32, i32, %struct.of_phandle_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
